# Clean_Architecture_Example

./: .flake8  .isort.cfg  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/: main.py
src/api/v1/: routes.py
src/users/api/v1/: user_routes.py
src/users/application/entities/: user.py
src/users/application/interactors/: user.py
src/users/application/interfaces/: schemas.py  user.py
src/users/infrastructure/: dependencies.py
src/users/infrastructure/repositories/: user.py
